# ConvKAN3D

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
ConvKAN3D/: ConvKAN3D.py
src/ConvKAN3D/: ConvKAN3D.py  efficient_kan.py
src/ConvKAN3DL/: testing.py
tests/: test_ConvKAN3D_efficient.py
